# stoic

./: .gitignore  LICENSE  README.md  pyproject.toml  stoic_colab.ipynb
configs/: config_sap.yaml  config_train_stoic.yaml
stoic/: __init__.py  feature_pooling.py  layers.py  model.py  predict_stoichiometry.py  seq_emb_models.py  utils.py
stoic_train/: callbacks.py  dataset.py  lightning_model.py  losses.py  metrics.py  samplers.py  train.py
